kubernetes/fluffy/apps/networking/pihole-proxy/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-proxy
  namespace: networking
spec:
  parentRefs:
    - name: gateway
      namespace: networking
  hostnames:
    - "pihole.home.es"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-external
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /admin
